--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 
 
 android {
+    namespace 'com.techupstudio.nativeadview'
     compileSdk 31
 
     defaultConfig {
@@ -27,9 +28,9 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.room:room-runtime:2.4.1'
+    implementation 'androidx.room:room-runtime:2.5.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'com.google.android.gms:play-services-ads:20.5.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.gms:play-services-ads:22.2.0'
 }
